<resources>
    <string name="app_name">2018-Trf-Compete-Client</string>
    <string name="map">Set destination in map</string>
    <string name="freeDrive">Free-driving</string>
    <string name="statistic">Statistics</string>
    <string name="settings">Settings</string>
    <string name="mapSearchTooltip">Search...</string>
    <string name="directions">directions</string>
    <string name="todo">TODO</string>
    <string name="seatbelts">Take seatbelts</string>
    <string name="handbrake">Release the handbrake</string>
    <string name="headlight">Turn the headlights on if you need</string>
    <string name="quickStart">Quick start violation</string>
    <string name="quickStop">Quick stop violation</string>
    <string name="safetySpeed">Safety speed abidance</string>
    <string name="overSpeed">OverSpeed violation</string>
    <string name="cautionFreedrive">You are in free-driving.\nYour driving pattern is still recorded.</string>
    <string name="driveEnd">End up drive</string>
    <string name="TmapCaution">Navigating with Tmap.\nCourse was set by Safety.</string>
    <string name="seatbeltR">Take off seatbelts</string>
    <string name="handbrakeR">Take the handbrake</string>
    <string name="headlightR">Turn the headlights on if you did</string>
    <string name="gearR">Change gear to Parking</string>
    <string name="searchResultHint">Location found : </string>
    <string name="searchResultZero">Can\'t find any location</string>
</resources>
